# ultrametric-matrix-tools

./: .gitignore  CITATION.cff  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml  test.py
benches/: jacobi_method.rs  jacobi_test.rs  multiple_multiplication.rs  multiplication_test.rs  performance.rs  property_check_test.rs  single_multiplication.rs  utils.rs
examples/: check_ultrametric_property.py  check_ultrametric_property.rs  get.py  get.rs  jacobi_method.py  jacobi_method.rs  multiplication.py  multiplication.rs  permutation_matrix.py  permutation_matrix.rs  power_iteration.py  power_iteration.rs  print_tree.py  print_tree.rs  prune_tree.py  prune_tree.rs  random_ultrametric_matrix.py  random_ultrametric_matrix.rs
src/: lib.rs  main.rs  rooted_tree.rs  test_functions.rs  ultrametric_tree.rs  utils.rs
