[package]
name = "fast-matrix-vector-multiplication"
version = "0.1.0"
authors = ["Andy Oertel <andy.oertel@informatik.tu-chemnitz.de>"]
edition = "2018"

[lib]
name = "ultrametric_multiplication"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
nalgebra = "0.29.0"
ptree = "0.3.2"
numpy = "0.14.1"
ndarray = "0.15.3"
pyo3 = "0.14.5"

[dev-dependencies]
rand = "0.8.4"
criterion = "0.3.5"
csv = "1.1.6"

[[bench]]
name = "single_multiplication"
harness = false

[[bench]]
name = "multiple_multiplication"
harness = false

[[bench]]
name = "jacobi_method"
harness = false